# marketing-ai-kb-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 001_init.py  e9f236ee42f6_increase_chunk_id_size_to_255.py
scripts/: evaluate.py  ingest_data.py  init_pgvector.sql  setup_ollama.py
src/domain/: chunking.py  exceptions.py  models.py  repositories.py  services.py  validation.py
src/frameworks/: agent_graph.py  config.py  database.py  streamlit_app.py
src/interface_adapters/embeddings/: cross_encoder_client.py  sentence_transformer_client.py
src/interface_adapters/llm/: ollama_client.py  prompt_templates.py
src/interface_adapters/parsers/: markdown_parser.py
src/interface_adapters/repositories/: orm_models.py  pgvector_search_repo.py  sqlalchemy_chunk_repo.py
src/rag_system/: __init__.py  document_loader.py  qa_chain.py  vectorstore.py
src/use_cases/: classify_intent.py  decompose_queries.py  generate_strategy.py  ingest_documents.py  search_chunks.py
tests/: conftest.py
tests/fixtures/: golden_dataset.jsonl
tests/integration/: test_end_to_end.py
tests/unit/domain/: test_chunking.py  test_rrf_fusion.py  test_services.py
tests/unit/frameworks/: test_agent_graph.py
tests/unit/interface_adapters/: test_pgvector_search_repo.py  test_sqlalchemy_chunk_repo.py
tests/unit/interface_adapters/parsers/: test_markdown_parser.py
tests/unit/use_cases/: test_classify_intent.py  test_decompose_queries.py  test_generate_strategy.py  test_ingest_documents.py  test_search_chunks.py
