[project]
name = "rag-system"
version = "0.1.0"
description = "A Streamlit-based RAG (Retrieval-Augmented Generation) system boilerplate"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
