[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/use_cases", "src/interface_adapters", "src/frameworks"]

[project]
name = "funnel-rag"
version = "0.1.0"
description = "Agentic psychographic RAG for funnel strategy generation"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0,<2",
    "sqlalchemy>=2.0.0,<3",
    "alembic>=1.13.0,<2",
    "psycopg2-binary>=2.9.9,<3",
    "pgvector>=0.2.5,<1",
    "sentence-transformers>=3.0.0,<4",
    "transformers>=4.30.0,<5",
    "langgraph>=0.2.0,<1",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "python-frontmatter>=1.0.0,<2",
    "beautifulsoup4>=4.12.0,<5",
    "lxml>=4.9.0,<6",
    "requests>=2.31.0,<3",
    "tenacity>=8.2.0,<9",
    "structlog>=24.1.0,<25",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-postgresql>=6.0.0,<7",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.4.0,<1",
    "mypy>=1.9.0,<2",
    "types-requests>=2.31.0,<3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"src/interface_adapters/llm/prompt_templates.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
